latest changes for android app

--- a/client/templates/search.html
+++ b/client/templates/search.html
@@ -37,12 +37,12 @@
                         <img src="/d1.png"/>
                         <div class="rating-value">
                         	<span>
-                            	<i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                           </span>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/half-star.png" alt=""/>
+                            <img src="/empty-star.png" alt=""/>
+                          </span>
                            <span class="pull-right">
                            		4mi
                            </span>
@@ -56,12 +56,12 @@
                         <img src="/d3.png"/>
                         <div class="rating-value">
                         	<span>
-                            	<i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                           </span>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/half-star.png" alt=""/>
+                            <img src="/empty-star.png" alt=""/>
+                          </span>
                            <span class="pull-right">
                            		2mi
                            </span>
@@ -75,12 +75,12 @@
                         <img src="/d1.png"/>
                         <div class="rating-value">
                         	<span>
-                            	<i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                           </span>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/half-star.png" alt=""/>
+                            <img src="/empty-star.png" alt=""/>
+                          </span>
                            <span class="pull-right">
                            		2mi
                            </span>
@@ -96,12 +96,12 @@
                         <img src="/d1.png"/>
                         <div class="rating-value">
                         	<span>
-                            	<i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                           </span>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/half-star.png" alt=""/>
+                            <img src="/empty-star.png" alt=""/>
+                          </span>
                            <span class="pull-right">
                            		4mi
                            </span>
@@ -115,12 +115,12 @@
                         <img src="/d3.png"/>
                         <div class="rating-value">
                         	<span>
-                            	<i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                           </span>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/half-star.png" alt=""/>
+                            <img src="/empty-star.png" alt=""/>
+                          </span>
                            <span class="pull-right">
                            		2mi
                            </span>
@@ -134,12 +134,12 @@
                         <img src="/d1.png"/>
                         <div class="rating-value">
                         	<span>
-                            	<i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                           </span>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/half-star.png" alt=""/>
+                            <img src="/empty-star.png" alt=""/>
+                          </span>
                            <span class="pull-right">
                            		2mi
                            </span>
@@ -155,12 +155,12 @@
                         <img src="/d1.png"/>
                         <div class="rating-value">
                         	<span>
-                            	<i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                           </span>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/half-star.png" alt=""/>
+                            <img src="/empty-star.png" alt=""/>
+                          </span>
                            <span class="pull-right">
                            		4mi
                            </span>
@@ -174,12 +174,12 @@
                         <img src="/d3.png"/>
                         <div class="rating-value">
                         	<span>
-                            	<i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                           </span>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/half-star.png" alt=""/>
+                            <img src="/empty-star.png" alt=""/>
+                          </span>
                            <span class="pull-right">
                            		2mi
                            </span>
@@ -193,12 +193,12 @@
                         <img src="/d1.png"/>
                         <div class="rating-value">
                         	<span>
-                            	<i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                           </span>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/half-star.png" alt=""/>
+                            <img src="/empty-star.png" alt=""/>
+                          </span>
                            <span class="pull-right">
                            		2mi
                            </span>
