--- a/client/templates/suggestion.html
+++ b/client/templates/suggestion.html
@@ -15,12 +15,12 @@
                         <img src="/d1.png"/>
                         <div class="rating-value">
                         	<span>
-                            	<i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                           </span>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/half-star.png" alt=""/>
+                            <img src="/empty-star.png" alt=""/>
+                          </span>
                            <span class="pull-right">
                            		4mi
                            </span>
@@ -34,12 +34,12 @@
                         <img src="/d3.png"/>
                         <div class="rating-value">
                         	<span>
-                            	<i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                           </span>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/half-star.png" alt=""/>
+                            <img src="/empty-star.png" alt=""/>
+                          </span>
                            <span class="pull-right">
                            		2mi
                            </span>
@@ -53,12 +53,12 @@
                         <img src="/d1.png"/>
                         <div class="rating-value">
                         	<span>
-                            	<i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                           </span>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/half-star.png" alt=""/>
+                            <img src="/empty-star.png" alt=""/>
+                          </span>
                            <span class="pull-right">
                            		2mi
                            </span>
@@ -74,12 +74,12 @@
                         <img src="/d1.png"/>
                         <div class="rating-value">
                         	<span>
-                            	<i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                           </span>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/half-star.png" alt=""/>
+                            <img src="/empty-star.png" alt=""/>
+                          </span>
                            <span class="pull-right">
                            		4mi
                            </span>
@@ -93,12 +93,12 @@
                         <img src="/d3.png"/>
                         <div class="rating-value">
                         	<span>
-                            	<i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                           </span>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/half-star.png" alt=""/>
+                            <img src="/empty-star.png" alt=""/>
+                          </span>
                            <span class="pull-right">
                            		2mi
                            </span>
@@ -112,12 +112,12 @@
                         <img src="/d1.png"/>
                         <div class="rating-value">
                         	<span>
-                            	<i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                           </span>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/half-star.png" alt=""/>
+                            <img src="/empty-star.png" alt=""/>
+                          </span>
                            <span class="pull-right">
                            		2mi
                            </span>
@@ -133,12 +133,12 @@
                         <img src="/d1.png"/>
                         <div class="rating-value">
                         	<span>
-                            	<i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                           </span>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/half-star.png" alt=""/>
+                            <img src="/empty-star.png" alt=""/>
+                          </span>
                            <span class="pull-right">
                            		4mi
                            </span>
@@ -152,12 +152,12 @@
                         <img src="/d3.png"/>
                         <div class="rating-value">
                         	<span>
-                            	<i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                           </span>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/half-star.png" alt=""/>
+                            <img src="/empty-star.png" alt=""/>
+                          </span>
                            <span class="pull-right">
                            		2mi
                            </span>
@@ -171,12 +171,12 @@
                         <img src="/d1.png"/>
                         <div class="rating-value">
                         	<span>
-                            	<i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                           </span>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/fill-star.png" alt=""/>
+                            <img src="/half-star.png" alt=""/>
+                            <img src="/empty-star.png" alt=""/>
+                          </span>
                            <span class="pull-right">
                            		2mi
                            </span>
