--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -145,9 +145,9 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
 .log_btn{font-size:22px}
 
 .suggest_foot img{width:auto;margin-top:7px}
-.rating-value span .ion-ios-star{color:#ffda44}
+.yellow-star{color:#ffda44}
 .rating-value span i{font-size:16px}
-.rating-value span .ion-ios-star-outline{color:#b7b7b7}
+.outline-star{color:#b7b7b7}
 .rating-value span:first-of-type{float:left;width:75%}
 .rating-value span:last-of-type{float:left;width:25%;font-size:13px;color:#777170}
 .rating-value{float:left;width:100%;clear:both}
@@ -199,6 +199,15 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
 .user-del p{color:#9c9998;font-size:18px}
 .your-post{margin:0;color:#777170;font-size:18px;text-transform:uppercase}
 .search-bg{background-color:#f9f9f9}
+.has-footer {
+    bottom: 75px;
+}
+.user-rate > span > img , .rating-value > span > img{
+    float: left;
+    margin-bottom: 5px;
+    width: auto !important;
+  height:14px;width:15px
+}
 .validation-invalid {
   color: #3a0900;
   font-size: 14px;
