--- a/client/templates/feed.html
+++ b/client/templates/feed.html
@@ -19,11 +19,11 @@
                     	<div class="col col-67">
                         	<div class="user-rate">
                                 <span>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star-outline"></i>
-                                    <i class="icon ion-ios-star-outline"></i>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/half-star.png" alt=""/>
+                                    <img src="/empty-star.png" alt=""/>
                                </span>
                                <span class="pull-right user-name">
                                     <span>Z. Ibrahimović</span>
@@ -48,11 +48,11 @@
                     	<div class="col col-67">
                         	<div class="user-rate">
                                 <span>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star-outline"></i>
-                                    <i class="icon ion-ios-star-outline"></i>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/half-star.png" alt=""/>
+                                    <img src="/empty-star.png" alt=""/>
                                </span>
                                <span class="pull-right user-name">
                                     <span>Z. Ibrahimović</span>
@@ -77,11 +77,11 @@
                     	<div class="col col-67">
                         	<div class="user-rate">
                                 <span>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star-outline"></i>
-                                    <i class="icon ion-ios-star-outline"></i>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/half-star.png" alt=""/>
+                                    <img src="/empty-star.png" alt=""/>
                                </span>
                                <span class="pull-right user-name">
                                     <span>Z. Ibrahimović</span>
@@ -106,11 +106,11 @@
                     	<div class="col col-67">
                         	<div class="user-rate">
                                 <span>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star-outline"></i>
-                                    <i class="icon ion-ios-star-outline"></i>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/half-star.png" alt=""/>
+                                    <img src="/empty-star.png" alt=""/>
                                </span>
                                <span class="pull-right user-name">
                                     <span>Z. Ibrahimović</span>
@@ -135,11 +135,11 @@
                     	<div class="col col-67">
                         	<div class="user-rate">
                                 <span>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star-outline"></i>
-                                    <i class="icon ion-ios-star-outline"></i>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/half-star.png" alt=""/>
+                                    <img src="/empty-star.png" alt=""/>
                                </span>
                                <span class="pull-right user-name">
                                     <span>Z. Ibrahimović</span>
@@ -164,11 +164,11 @@
                     	<div class="col col-67">
                         	<div class="user-rate">
                                 <span>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star-outline"></i>
-                                    <i class="icon ion-ios-star-outline"></i>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/half-star.png" alt=""/>
+                                    <img src="/empty-star.png" alt=""/>
                                </span>
                                <span class="pull-right user-name">
                                     <span>Z. Ibrahimović</span>
