--- a/client/templates/forgot.html
+++ b/client/templates/forgot.html
@@ -1,24 +1,39 @@
 <ion-view view-title="Forgot Password">
   <div class="bar bar-header bar-light head_bar">
     <div class="back_arrrow">
-      <span class="sp2"><a ui-sref="login"><i class="icon ion-ios-arrow-thin-left ion-android-arrow-back"></i></a></span>
-          <h2>Forgot Password</h2> 
+      <span class="sp2"><a ui-sref="login"><img src="./left-arrow.png" alt=""/></a></span>
+      <h2>Forgot Password</h2> 
     </div>
   </div>
-  <ion-content>
+  <ion-content class="orange-bg">
     <div class="full_back">
       <div class="content3">
-        <form name="forgotForm" validation-schema schema="Register" ng-submit="forgot.forgotPassword(forgotForm, data)">
-          <div class="input_form register_input">
+        
+      <!--
+        <div class="row" ng-if="signup.registerErr">
+          <div class="col">
+            <div class="fill-content">
+              <p> </p>
+            </div>
+          </div>
+        </div> 
+      -->
+
+        <form name="Form" validation-schema schema="Register" ng-submit="forgot.forgotPassword(Form)">
+          <div class="input_form register_input register-form">
             <div class="list list_item">
               <label class="item-input item-floating-label">
-                <span class="input-label">Email</span>
-                <input name="email" ng-model="forgot.email" type="text" placeholder="Email">
+                <span class="icon-wrap">
+                  <span class="icon-top"><img src="./mail.png" alt="" /></span>
+                  <input name="email" ng-model="email" type="text" placeholder="EMAIL">
+                </span>
               </label>
             </div>
-            <button class="button button-block button-light log_btn">
-              Send Email
-            </button>
+            <div class="reg_dv">
+              <button class="button button-block button-light log_btn">
+                Send Email
+              </button>
+            </div>
           </div>
         </form>
       </div>
