--- a/client/templates/register.html
+++ b/client/templates/register.html
@@ -1,7 +1,7 @@
 <ion-view view-title="register">
   <div class="bar bar-header bar-light head_bar">
     <div class="back_arrrow">
-    	<span class="sp2"><a ui-sref="welcome"> <img src="./arrrow_left.png" /></a></span>
+    	<span class="sp2"><a ui-sref="welcome"><img src="./left-arrow.png" alt=""/></a></span>
       <h2>Register</h2> 
     </div>
 	</div>
@@ -61,6 +61,12 @@
               <button class="button button-block button-light log_btn">
                 Register
               </button>
+              <span class="sp_or">or</span>
+              <div class="social_fb">
+                  <button class="button button-block button-light log_btn fb_btn">
+                      <span><img src="./fb.png" alt=""/></span>Register With Facebook
+                  </button>
+              </div>
             </div>
           </div>
         </form>
