--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -25,14 +25,14 @@
                         <h3>43</h3>
                         <p>Following</p>
                     </div>
-                    <div class="row">
-                        <div class="bttn-wrap">
-                            <button class="button button-block button-light edit-btn">
-                                <span><img src="/edit.png" alt=""/></span>
-                                Edit Profile
-                            </button>
-                        </div>
-                   </div>
+                    
+                    <div class="bttn-wrap">
+                        <button class="button button-block button-light edit-btn" ng-click="profile.redirectTo()">
+                            <span><img src="/edit.png" alt=""/></span>
+                            Edit Profile
+                        </button>
+                    </div>
+                   
                 </div>
                 
             </div>
