--- a/client/templates/settings.html
+++ b/client/templates/settings.html
@@ -2,7 +2,7 @@
   <ion-header-bar align-title="left" class="bar-positive">
     <div class="bar bar-header bar-light head_bar">
       <div class="back_arrrow">
-        <span class="sp2"><a ui-sref="profile"><img src="./arrrow_left.png" /></a></span>  
+        <span class="sp2"><a ui-sref="tab.profile"><img src="./left-arrow.png" alt=""/></a></span>  
         <h2>Edit Profile</h2>
       </div>
     </div>
