--- a/client/templates/review.html
+++ b/client/templates/review.html
@@ -19,7 +19,7 @@
 
 <ion-view view-title="Review">
   <ion-header-bar align-title="left" class="bar-positive">
-    <div class="bar bar-header bar-light head_bar">
+    <div class="bar bar-header bar-light head_bar rev-header">
       <div class="back_arrrow">
         <span class="sp2"><a ng-click="review.previousView()"><img src="./left-arrow.png" alt=""/></a></span>  
         <h2>Review a dish</h2>
@@ -28,10 +28,13 @@
   </ion-header-bar>
   <ion-content>
     <div class="full_back suggest">
-      <div class="dish-image">
+      <div class="dish-image" ng-if="review.image">
+        <img src="{{review.image}}" alt="" />
+      </div>
+      <div class="dish-image" ng-if="!review.image">
         <img src="/dish-view.png" alt="" />
       </div>
-      <div class="btn-row">
+      <div class="btn-row round-btn">
         <div class="center-btn">
           <div class="btn-wrap">
           </div>
@@ -39,17 +42,17 @@
       </div>
       </div>
   </ion-content>
-    <div class="bar-assertive suggest_foot">
-      <div class="tabs tabs-icon-top dish-view">
+    <div class="bar-assertive suggest_foot review">
+      <div class="tabs tabs-icon-top dish-view rev-tabs">
           <a class="tab-item" ng-click="review.openGallery()">
             <img src="/gallery.png" alt="" class="inactive">
             <img src="/gallery-hover.png" class="active" alt="" style="display:none">
           </a>
-          <a class="tab-item">
+          <a class="tab-item" ng-click="review.clickPicture()">
              <img src="/cam.png" alt=""  class="inactive" style="display:none">
             <img src="/cam-hover.png" alt="" class="active">
           </a>
-          <a class="tab-item">
+          <a class="tab-item" ng-click="review.captureVideo()">
             <img src="/video.png" alt="" class="inactive">
             <img src="/video-hover.png" alt="" style="display:none"  class="active">
           </a>
